<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WZC</string>
    <string name="text_Zondag">Zon</string>
    <string name="text_Maandag">Maan</string>
    <string name="text_disdag">Dins</string>
    <string name="text_woensdag">Woens</string>
    <string name="text_donderdag">Donder</string>
    <string name="text_vrijdag">Vrij</string>
    <string name="text_zaterdag">Zater</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="skype_intent_handler">Skype</string>
    <string name="country_prompt">Kies U Kleur</string>
    <string name="action_today">Go to today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="event">Event</string>
    <string name="fire">fire</string>
    <string name="cancel">cancel</string>

    <string-array name="country_arrays">
        <item>Rood</item>
        <item>Groen</item>
        <item>Blauw</item>
        <item>Wit</item>
        <item>Zwart</item>
        <item>Geel</item>
        <item>Paars</item>
        <item>Oranje</item>
    </string-array>

    <string name="activity_contacts_list">Contacts List</string>
    <string name="activity_contact_detail">Contact Detail</string>
    <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
    <string name="app_description">This is a sample app, demonstrating use of the Android system Contacts Provider.</string>
    <string name="imageview_description">Contact Thumbnail</string>
    <string name="address_button_description">View Address</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_edit_contact">Edit Contact</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="no_contact_selected">No Contact Selected</string>
    <string name="search_hint">Find contacts</string>

    <!--
         Used for the AlphabetIndexer in ContactsListFragment to provide quick navigation by
         alphabet using ListView fast scroll.
    -->
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <!--
         When using ContactsContract.Contacts#CONTENT_FILTER_URI to search contacts, a match occurs
         when using a number of different fields, such as name, e-mail address, address, phone
         number, etc. When a match occurs that is not the name, there is currently no way to tell
         which other field was matched. This string is displayed in the secondary display text in
         ContactsListFragment when a search query match occurs that is not the display name.
    -->
    <string name="search_match_other">Matches Other Field</string>
    <string name="no_address">No addresses found</string>
    <string name="no_intent_found">No application found to handle this action</string>
    <string name="menu_delete_contact">delete</string>
    <string name="Naam"></string>
    <string name="text_Naam">Naam</string>
    <string name="text_voornaam">Voornaam</string>
    <string name="text_Achternaam">Achternaam</string>
    <string name="text_telenr">TelefoonNr</string>
    <string name="text_gsm">GSM</string>
    <string name="text_Adres"></string>
    <string name="text_adres">Adres :</string>
    <string name="text_straat">Straat</string>
    <string name="label_smorgens" translatable="false">Ontbijt</string>
    <string name="label_smiddags">Middagmaal</string>
    <string name="label_savonds">Avondmaal</string>
    <string name="button_submit">submit</string>
    <string name="button_image">Kies Image</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="action_settings">Settings</string>


    <string name="accounts">Accounts</string>
    <string name="description_add">Add Calendar</string>
    <string name="summary">Title</string>
    <string name="summary_hint">Enter the calendar title</string>

    <string name="save">Save</string>
    <string name="icon_desc">Application icon</string>
    <string name="title_separator_desc">Title separator</string>
    <string name="refresh">Refresh</string>
    <string name="batchadd">Copy Calendar x3 (Batch)</string>
    <string name="edit">Edit Calendar</string>
    <string name="delete">Delete Calendar</string>
    <string name="delete_title">Delete Calendar?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="error_format">[Error] %s</string>





    <string name="button_annuleer">can</string>
    <string name="Home">home</string>
    <string name="main_home">home</string>
    <string name="main_add">add Person</string>
    <string name="edid"/>

    <string name="seartch">seartch</string>
    <string name="setings">setings</string>

    <string name="email">email</string>

    <string name="reload">reload</string>
    <string name="more">more</string>
    <string name="activity_contact_edit">contactseditactivity</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_user">user</string>
</resources>
