<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<!-- Main Activity single pane layout. This layout contains a single ContactsListFragment that
     displays a list of contacts. Tapping on a contact will start a new activity to display the
     contact details. -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_height="match_parent"
                android:layout_width="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              android:name="com.ehb.xavier.prototype.Contact.ContactsListFragment"
              android:id="@+id/contact_list"
              android:layout_height="match_parent"
              android:layout_width="match_parent"/>
    <!-- Some Buttons -->
    <RadioGroup
        android:gravity="center_vertical"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:background="@drawable/maintab_toolbar_bg"
        android:layout_height="60dp"
        android:layout_width="fill_parent"

        android:layout_alignParentBottom="true">

        <RadioButton
            style="@style/main_tab_bottom"
            android:id="@id/radio_button0"
            android:layout_marginTop="2.0dip"
            android:text="@string/main_add"
            android:drawableTop="@android:drawable/ic_menu_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <RadioButton
            style="@style/main_tab_bottom"
            android:id="@+id/radio_button1"
            android:layout_marginTop="2.0dip"
            android:text="@string/edit"
            android:drawableTop="@android:drawable/ic_menu_edit"
            android:checked="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <RadioButton
            style="@style/main_tab_bottom"
            android:id="@id/radio_button2"
            android:layout_marginTop="2.0dip"
            android:text="@string/delete"
            android:drawableTop="@android:drawable/ic_menu_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <RadioButton
            style="@style/main_tab_bottom"
            android:id="@id/radio_button3"
            android:layout_marginTop="2.0dip"
            android:text="@string/seartch"
            android:drawableTop="@android:drawable/ic_menu_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <RadioButton
            style="@style/main_tab_bottom"
            android:id="@id/radio_button4"
            android:layout_marginTop="2.0dip"
            android:text="@string/setings"
            android:drawableTop="@android:drawable/ic_menu_manage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </RadioGroup>
</RelativeLayout>