<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2013 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
    android:id="@+id/contactedit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="100">

        <ImageView
            android:id="@+id/contact_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="@integer/contact_detail_photo_percent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_contact_picture_180_holo_light"
            android:contentDescription="@string/imageview_description"/>

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="@integer/contact_detail_info_percent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text_Naam"
                android:id="@+id/textView"/>

            <EditText
                android:id="@+id/contact_name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="35dp"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/email"
                android:id="@+id/textView2" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/contract_email"
                    android:textSize="35dp"
                    android:inputType="textEmailAddress"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView8"
                    android:background="@android:drawable/ic_delete"
                    android:visibility="invisible" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text_telenr"
                android:id="@+id/textView3"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/contact_tel1"
                    android:inputType="phone"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView9"
                    android:background="@android:drawable/ic_delete"
                    android:visibility="invisible" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text_gsm"
                android:id="@+id/textView4"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:id="@+id/contact_gsm1"
                    android:textSize="35dp"
                    android:inputType="phone"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:id="@+id/imageView10"
                    android:background="@android:drawable/ic_delete"
                    android:visibility="invisible" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Skype"
                android:id="@+id/textView16"
                android:textSize="35dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/skypeID1"
                android:textSize="35dp"
                android:inputType="text" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Verwerk"
                android:id="@+id/button2"/>

        </LinearLayout>

    </LinearLayout>

    <!-- This view will be displayed when the views above are hidden. That happens when in two-pane
         layout mode and no contact is currently selected and therefore the this fragment will
         simply show a text message instead of contact details. -->
    <TextView
        android:id="@id/android:empty"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_contact_selected"
        android:fontFamily="sans-serif-light"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

</FrameLayout>
