<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/userfoto"
                android:layout_column="0"
                android:background="@color/white"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Kies Beeld"
                android:id="@+id/imageButton"
                android:layout_gravity="bottom"
                android:textSize="35dp"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Voornaam"
                android:id="@+id/textView2"
                android:layout_column="0"
                android:textColor="@color/white"
                android:textSize="35dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/voornaam"
                android:hint="@string/text_voornaam"
                android:textSize="35dp"
                android:layout_weight="1"
                android:layout_span="2"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Naam"
                android:id="@+id/textView3"
                android:layout_column="0"
                android:textSize="35dp"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/achtarnaam"
                android:singleLine="false"
                android:hint="Naam"
                android:textSize="35dp"
                android:layout_weight="1"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Emaill"
                android:id="@+id/textView"
                android:textSize="35dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/email"
                android:textSize="35dp"
                android:layout_weight="1"
                android:hint="Email"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:id="@+id/imageView4"
                android:visibility="invisible"
                android:background="@android:drawable/ic_delete" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text_telenr"
                android:id="@+id/checktext"
                android:layout_column="0"
                android:textSize="35dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/telnr"
                android:hint="@string/text_telenr"
                android:textSize="35dp"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:id="@+id/imageView5"
                android:visibility="invisible"
                android:background="@android:drawable/ic_delete" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/text_gsm"
                android:id="@+id/textView7"
                android:textSize="35dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/gsm"
                android:textSize="35dp"
                android:hint="@string/text_gsm"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:id="@+id/imageView6"
                android:visibility="invisible"
                android:background="@android:drawable/ic_delete" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Skype"
                android:id="@+id/textView15"
                android:textSize="35dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/skypeID"
                android:hint="Skype"
                android:textSize="35dp"
                android:layout_span="2"
                android:layout_weight="1"
                android:inputType="textCapWords|textPersonName" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:text="Verwerk"
                android:id="@+id/submit"
                android:layout_column="0"
                android:textSize="35dp"
                android:layout_weight="1"/>

        </TableRow>

    </TableLayout>
    <!-- Some Buttons -->
</RelativeLayout>